--- a/book/b3-devboard/ice-gpu-acceleration.ipynb
+++ b/book/b3-devboard/ice-gpu-acceleration.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kAYPwu1DhMNw",
         "outputId": "8da97899-2cad-4c6a-eaaf-32c5ae0a873d",
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ziTgDyKyhMN1"
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Q5OisWOehMN4",
         "outputId": "f91dba36-cc03-474b-a19a-353c89aad499",
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "C1eioHVdEJVg"
       },
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "GxWqqXRBhMN7"
       },
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "2ll905D2hMN8"
       },
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "trxhPH6VhMN8"
       },
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "lrrGB5gshMN9"
       },
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "icfiKJL_hMN_",
         "outputId": "585e3d69-8f1b-44d4-b90f-5ee561feca7f",
@@ -545,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "w0jcwTVFWhey"
       },
@@ -558,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "qt8pxSE9WjdS",
         "outputId": "a3e17e1f-e4c8-414d-a571-05c0d3be1772",
@@ -686,13 +686,13 @@
         "### Reflection 📈\n",
         "\n",
         "### *Why* does the CPU outperform the GPU dot product with smaller vectors?\n",
-        "CPUs utilize the cache quickly and are made to do quick operations.\n",
+        "A GPU executes operations in a very parallel manner, and effectively utilize more threads. So, in the case, for small computations, the overhead cost is costing the GPU majority of its processing time (math limited is the limiting factor). On the other hand, CPU's caches help to make smaller computations more efficient without that overhead cost.\n",
         "\n",
         "### *How* did the CPU vs. GPU perform for `min()`?\n",
-        "Initially, with smaller tensor sizes, the GPU outperformed the CPU by executing quicker. Hoever, with larger tensor sizes, the CPU was starting to compare in performance (and in some cases performed better).\n",
+        "Initially, the GPU is significantly faster than the CPU (starting with 100 elements). Then, the CPU is quicker with smaller elements, until around 100k elements. There are some slight fluctuations with the GPU, however, overall, the GPU is mostly outperforming the CPU in performance time (with some outliers) with large tensor sizes.\n",
         "\n",
         "#### *Why* did it perform that way?\n",
-        "I think this is because, as was mentioned earlier, the CPU utilizes the cache and, so it can pull up recent memory quickly. As such, the GPU was probably executing each computation individually, whereas the CPU had means for more efficient computations."
+        "I think this is because, as was mentioned earlier, the overhead costs of the GPU eventually are outweighed by their arithmetic operations, and their highly parallel execution becomes a lot more useful."
       ]
     }
   ],
